--- a/styles/skills2.css
+++ b/styles/skills2.css
@@ -102,7 +102,10 @@
 
 #skill-navigation-title {
   top: 90%;
-  position: relative;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  width: 100%;
   color: white;
 }
 
